[project]
name = "gtfs-kit"
version = "10.0.0"
description = "A Python library for analyzing GTFS feeds."
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alexander Raichev", email = "araichev@mrcagney.com" },
]
dependencies = [
    "shapely>=1.8",
    "json2html>=1",
    "geopandas>=1",
    "rtree>=0",
    "folium>=0",
    "requests>=2",
    "pandas>=2.2.2",
]

[project.urls]
Repository = "https://github.com/mrcagney/gtfs_kit"
Documentation = "https://mrcagney.github.io/gtfs_kit_docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["gtfs_kit"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1",
    "pytest>=6",
    "sphinx>=3",
    "pre-commit-uv>=0",
    "matplotlib>=1",
    "pytest-socket>=0",
    "black>22",
    "nbstripout>=0.5",
    "ruff>=0.0.257",
    "publish_sphinx_docs>=1.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = ["E501", "E731", "F401", "F403"]
exclude = ["*.ipynb"]
