[project]
name = "gtfs-kit"
version = "12.0.1"
description = "A Python library for analyzing GTFS feeds."
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alexander Raichev", email = "araichev@mrcagney.com" },
]
dependencies = [
    "shapely>=1.8",
    "json2html>=1",
    "geopandas>=1",
    "rtree>=0",
    "folium>=0",
    "requests>=2",
    "pandas[pyarrow]>=2.2.2",
]

[dependency-groups]
dev = [
    "pytest>=6",
    "sphinx>=3",
    "pre-commit-uv>=0",
    "matplotlib>=1",
    "pytest-socket>=0",
    "ruff>=0.0.257",
    "marimo>=0.13.2",
    "mapclassify>=2.8.1",
    "plotly>=6.1.2",
    "sphinx-rtd-theme>=3.0.2",
    "nbformat>=5.10.4",
]

[project.urls]
Repository = "https://github.com/mrcagney/gtfs_kit"
Documentation = "https://mrcagney.github.io/gtfs_kit_docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["gtfs_kit"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[tool.ruff]
line-length = 90
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = ["E501", "E731", "F401", "F403"]
exclude = ["notebooks/*.py", "notebooks/*.ipynb"]
